# doctr

./: .gitignore  PACKAGING_README.md  README.md  inference.py  pyproject.toml  run_inference.py
doctr/: inference.py
src/doctr/: GeoTr.py  __init__.py  inference.py
tests/: test_doctr.py  test_inference.py
