[tool.poetry]
name = "doctr"
version = "0.1.0"
description = "Document Image Transformer for Geometric Unwarping and Illumination Correction"
authors = ["Hao Feng <haof@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"
packages = [{include = "doctr", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.6.0"
torchvision = "^0.21.0"
timm = "^1.0.15"
opencv-python = "^4.11.0.86"
scikit-image = "^0.25.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 